<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometro">Total de quilômetro</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calculator">CALCULAR</string>
    <string name="validation_numbers">Campo(s) Vazio(s) ou Zerado(s)</string>

</resources>